--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,15 @@ author:
 
 collections:
   chapters:
-      output: false
+      output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "chapters"
+    values:
+      layout: "chapter"
 
 markdown: kramdown
 
