--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 # site.title, site.author.name
 
 title:  Strange Case of Dr. Jekyll and Mr. Hyde
+baseurl: "jekyll-book-theme"
 author:
   name: Robert Louis Stevenson
 
